Added peer node
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/playbooks/templates/gateway_def.j2
+++ b/playbooks/templates/gateway_def.j2
@@ -12,4 +12,4 @@ spec:
       name: tcp{{ ext_port }}
       protocol: TCP
     hosts:
-    - '{{ istio_hostname }}'
+    - '{{ (istio_hostname=="")|ternary("*", istio_hostname) }}'
