Reworked how node get exposed to internet
A framework was introduced to allow more load balancer to
be used to expose node endpoints, also added module to expose
multiple ports per node. For example, orderer node can expose
data port and admin port.

Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/playbooks/network/istio/templates/gateway_def.j2
+++ b/playbooks/network/istio/templates/gateway_def.j2
@@ -7,9 +7,11 @@ spec:
   selector:
     istio: ingressgateway
   servers:
+{% for aport in EXT_PORTS %}
   - port:
-      number: {{ ext_port }}
-      name: tcp{{ ext_port }}
+      number: {{ aport|int }}
+      name: tcp{{ aport }}
       protocol: TCP
     hosts:
-    - '{{ (istio_hostname=="")|ternary("*", istio_hostname) }}'
+    - '{{ (NODE_HOSTNAME=="")|ternary("*", NODE_HOSTNAME) }}'
+{% endfor %}
