Fixed wrong port in nginx ingress controller case
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/playbooks/network/nginx/templates/service_def.j2
+++ b/playbooks/network/nginx/templates/service_def.j2
@@ -8,7 +8,7 @@ spec:
   ports:
 {% for aport in tobeadded %}
   - name: tcp{{ aport.key }}
-    port: {{ aport.key }}
+    port: {{ aport.key|int }}
     protocol: TCP
-    targetPort: {{ aport.key }}
+    targetPort: {{ aport.key|int }}
 {%  endfor %}
