Fixed the configmap entry removal issue
The problem is that k8s, json patch removal item does not really
work. There has been a bug on this which does not seem to be
resolved at present. Use the workaround to avoid the issue.

Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/playbooks/network/nginx/templates/configmap_del.j2
+++ b/playbooks/network/nginx/templates/configmap_del.j2
@@ -4,7 +4,9 @@ metadata:
   name: fabric-tcp-services
   namespace: {{ theconfigmap.resources[0].metadata.namespace }}
 data:
-{% for aport in toberemoved %}
-  {{ aport.key|int }}:
-  $patch: delete
+  $patch: replace
+{% for aport in served %}
+{%   if aport.value is not match(entryprefix) %}
+  {{ aport.key }}: {{ aport.value }}
+{%   endif %}
 {%  endfor %}
