Fixed the host url issue in the asset file
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/roles/agent/ops/assetgen/templates/msp.j2
+++ b/roles/agent/ops/assetgen/templates/msp.j2
@@ -29,5 +29,5 @@
       "organizational_unit_identifier": "peer"
     }
   },
-  "host_url": "https://localhost:3002"
+  "host_url": "{{ CONSOLE_URL }}"
 }
