allow asset gen to be selective
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/roles/agent/ops/assetgen/templates/msp.j2
+++ b/roles/agent/ops/assetgen/templates/msp.j2
@@ -29,5 +29,5 @@
       "organizational_unit_identifier": "peer"
     }
   },
-  "host_url": "{{ CONSOLE_URL }}"
+  "host_url": "{{ CONSOLE_URL|default('http://localhost:3000') }}"
 }
