--- a/roles/agent/ops/channelcreate/templates/configtx.j2
+++ b/roles/agent/ops/channelcreate/templates/configtx.j2
@@ -1,121 +1,119 @@
 Organizations:
-  - &OrdererOrg
-    Name: OrdererOrg
-    ID: {{ orgid }}
-    MSPDir: {{ agentworkdir }}/msp
-    Policies:
-      Readers:
-        Type: Signature
-        Rule: "OR('{{ orgid }}.admin', '{{ orgid }}.peer', '{{ orgid }}.orderer')"
-      Writers:
-        Type: Signature
-        Rule: "OR('{{ orgid }}.admin', '{{ orgid }}.peer', '{{ orgid }}.orderer')"
-      Admins:
-        Type: Signature
-        Rule: "OR('{{ orgid }}.admin')"
-      Endorsement:
-        Type: Signature
-        Rule: "OR('{{ orgid }}.peer')"
-    OrdererEndpoints:
-    - {{ initialOrdererNode }}.{{ ansible_operator_meta.namespace }}:7050
+- &{{ orgid }}
+  Name: {{ orgid }}
+  ID: {{ orgid }}
+  MSPDir: {{ agentworkdir }}/msp
+  Policies:
+    Readers:
+      Type: Signature
+      Rule: "OR('{{ orgid }}.admin', '{{ orgid }}.peer', '{{ orgid }}.orderer')"
+    Writers:
+      Type: Signature
+      Rule: "OR('{{ orgid }}.admin', '{{ orgid }}.peer', '{{ orgid }}.orderer')"
+    Admins:
+      Type: Signature
+      Rule: "OR('{{ orgid }}.admin')"
+    Endorsement:
+      Type: Signature
+      Rule: "OR('{{ orgid }}.peer')"
+  OrdererEndpoints:
+  - {{ initialOrdererNode }}.{{ ansible_operator_meta.namespace }}:7050
 {% if endpoint is defined %}
-    - {{ endpoint }}
+  - {{ endpoint }}
 {% endif %}
 
 Capabilities:
-    Channel: &ChannelCapabilities
-        V2_0: true
-
-    Orderer: &OrdererCapabilities
-        V2_0: true
-
-    Application: &ApplicationCapabilities
-        V2_0: true
+  Channel: &ChannelCapabilities
+    V2_0: true
+  Orderer: &OrdererCapabilities
+    V2_0: true
+  Application: &ApplicationCapabilities
+    V2_0: true
 
 Application: &ApplicationDefaults
-    Organizations:
+  Organizations:
 
-    Policies:
-        Readers:
-            Type: ImplicitMeta
-            Rule: "ANY Readers"
-        Writers:
-            Type: ImplicitMeta
-            Rule: "ANY Writers"
-        Admins:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Admins"
-        LifecycleEndorsement:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Endorsement"
-        Endorsement:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Endorsement"
+  Policies:
+    Readers:
+      Type: ImplicitMeta
+      Rule: "ANY Readers"
+    Writers:
+      Type: ImplicitMeta
+      Rule: "ANY Writers"
+    Admins:
+      Type: ImplicitMeta
+      Rule: "MAJORITY Admins"
+    LifecycleEndorsement:
+      Type: ImplicitMeta
+      Rule: "MAJORITY Endorsement"
+    Endorsement:
+      Type: ImplicitMeta
+      Rule: "MAJORITY Endorsement"
 
-    Capabilities:
-        <<: *ApplicationCapabilities
+  Capabilities:
+    <<: *ApplicationCapabilities
 Orderer: &OrdererDefaults
-    OrdererType: etcdraft
-    Addresses:
-        - {{ initialOrdererNode }}.{{ ansible_operator_meta.namespace }}:7050
+  OrdererType: etcdraft
+  Addresses:
+  - {{ initialOrdererNode }}.{{ ansible_operator_meta.namespace }}:7050
 {% if endpoint is defined %}
-        - {{ endpoint }}
+  - {{ endpoint }}
 {% endif %}
 
-    EtcdRaft:
-        Consenters:
-        - Host: {{ initialOrdererNode }}.{{ ansible_operator_meta.namespace }}:7050
-          Port: 7050        
-          ClientTLSCert: {{ agentworkdir }}/tls/server.crt
-          ServerTLSCert: {{ agentworkdir }}/tls/server.crt
+  EtcdRaft:
+    Consenters:
+    - Host: {{ initialOrdererNode }}.{{ ansible_operator_meta.namespace }}:7050
+      Port: 7050        
+      ClientTLSCert: {{ agentworkdir }}/tls/server.crt
+      ServerTLSCert: {{ agentworkdir }}/tls/server.crt
 
-    BatchTimeout: 2s
-    BatchSize:
-        MaxMessageCount: 10
-        AbsoluteMaxBytes: 99 MB
-        PreferredMaxBytes: 512 KB
+  BatchTimeout: 2s
+  BatchSize:
+    MaxMessageCount: 10
+    AbsoluteMaxBytes: 99 MB
+    PreferredMaxBytes: 512 KB
 
-    Organizations:
+  Organizations:
 
-    Policies:
-        Readers:
-            Type: ImplicitMeta
-            Rule: "ANY Readers"
-        Writers:
-            Type: ImplicitMeta
-            Rule: "ANY Writers"
-        Admins:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Admins"
-        BlockValidation:
-            Type: ImplicitMeta
-            Rule: "ANY Writers"
+  Policies:
+    Readers:
+      Type: ImplicitMeta
+      Rule: "ANY Readers"
+    Writers:
+      Type: ImplicitMeta
+      Rule: "ANY Writers"
+    Admins:
+      Type: ImplicitMeta
+      Rule: "MAJORITY Admins"
+    BlockValidation:
+      Type: ImplicitMeta
+      Rule: "ANY Writers"
 
 Channel: &ChannelDefaults
-    Policies:
-        Readers:
-            Type: ImplicitMeta
-            Rule: "ANY Readers"
-        Writers:
-            Type: ImplicitMeta
-            Rule: "ANY Writers"
-        Admins:
-            Type: ImplicitMeta
-            Rule: "MAJORITY Admins"
+  Policies:
+    Readers:
+      Type: ImplicitMeta
+      Rule: "ANY Readers"
+    Writers:
+      Type: ImplicitMeta
+      Rule: "ANY Writers"
+    Admins:
+      Type: ImplicitMeta
+      Rule: "MAJORITY Admins"
 
-    Capabilities:
-        <<: *ChannelCapabilities
+  Capabilities:
+    <<: *ChannelCapabilities
 
 Profiles:
-    ApplicationGenesis:
-        <<: *ChannelDefaults
-        Orderer:
-            <<: *OrdererDefaults
-            Organizations:
-                - *OrdererOrg
-            Capabilities: *OrdererCapabilities
-        Application:
-            <<: *ApplicationDefaults
-            Organizations:
-                - *OrdererOrg
-            Capabilities: *ApplicationCapabilities
+  ApplicationGenesis:
+    <<: *ChannelDefaults
+    Orderer:
+      <<: *OrdererDefaults
+      Organizations:
+      - *{{ orgid }}
+      Capabilities: *OrdererCapabilities
+    Application:
+      <<: *ApplicationDefaults
+      Organizations:
+      - *{{ orgid }}
+      Capabilities: *ApplicationCapabilities
