Include admin cert in the msp asset generation
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/roles/agent/ops/assetgen/templates/msp.j2
+++ b/roles/agent/ops/assetgen/templates/msp.j2
@@ -3,7 +3,7 @@
   "msp_id": "{{ anode.spec.organization|replace('.', '-') }}",
   "name": "{{ anode.spec.organization }} MSP",
   "type": "msp",
-  "admins": [],
+  "admins": [ "{{ thesecret.resources[0].data['admin.crt'] }}" ],
   "root_certs": [
     "{{ thesecret.resources[0].data['ca-cert.pem'] }}"
   ],
