--- a/roles/agent/ops/assetgen/templates/orderer.j2
+++ b/roles/agent/ops/assetgen/templates/orderer.j2
@@ -4,7 +4,7 @@
   "api_url": "{{ anode.status.endpoint }}",
   "operations_url": "{{ anode.status.operations }}",
   "type": "fabric-orderer",
-  "msp_id": "{{ assetname }}",
+  "msp_id": "{{ orgid }}",
   "system_channel_id": "systemchannel",
   "cluster_id": "{{ anode.metadata.namespace }}",
   "cluster_name": "{{ anode.metadata.namespace }}",
