Fixed peer mspid bug
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/roles/agent/ops/channelcreate/templates/configtx.j2
+++ b/roles/agent/ops/channelcreate/templates/configtx.j2
@@ -131,6 +131,7 @@ Profiles:
     Application:
       <<: *ApplicationDefaults
       Organizations:
+      - *{{ orgid }}
 {% for org in additionalOrgs %}
 {% set theattr = (lookup('file', agentworkdir+'/'+org+'/msp/id.json')|from_json) %}
       - *{{ theattr.mspid }}
