Fixed channel join bug and added production scenario
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/molecule/basesystem/tasks/templates/agent_assetgen.j2
+++ b/molecule/basesystem/tasks/templates/agent_assetgen.j2
@@ -4,7 +4,7 @@ metadata:
   name: {{ agentname }}
 spec:
   organization: {{ orgname }}
-  cleanup: true
+  cleanup: {{ cleanupflag | default(true) }}
   actions:
   - name: assetgen
     description: Generate asset file
