--- a/molecule/basesystem/tasks/templates/agent_nodeimport.j2
+++ b/molecule/basesystem/tasks/templates/agent_nodeimport.j2
@@ -4,6 +4,7 @@ metadata:
   name: {{ agentname }}
 spec:
   organization: {{ orgname }}
+  cleanup: {{ cleanupflag | default(true) }}
   actions:
   - name: nodeimport
     description: import nodes and their certificates
