--- a/molecule/basesystem/tasks/templates/agent_channelcreate.j2
+++ b/molecule/basesystem/tasks/templates/agent_channelcreate.j2
@@ -4,6 +4,7 @@ metadata:
   name: {{ agentname }}
 spec:
   organization: {{ orgname }}
+  cleanup: {{ cleanupflag | default(true) }}
   actions:
   - name: channelcreate
     description: Create new channel
