--- a/molecule/basesystem/tasks/templates/agent_channelquery.j2
+++ b/molecule/basesystem/tasks/templates/agent_channelquery.j2
@@ -4,6 +4,7 @@ metadata:
   name: {{ agentname }}
 spec:
   organization: {{ orgname }}
+  cleanup: {{ cleanupflag | default(true) }}
   actions:
   - name: channelquery
     description: query channel configuration
