Reuse common code
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/molecule/basesystem/tasks/templates/agent_assetgen.j2
+++ b/molecule/basesystem/tasks/templates/agent_assetgen.j2
@@ -10,4 +10,4 @@ spec:
     description: Generate asset file
     parameters:
       assettypes: ['ca', 'orderer', 'peer']
-      includewallets: no
+      includewallets: {{ includewallets|default('no') }}
