--- a/molecule/basesystem/tasks/templates/agent_assetgen.j2
+++ b/molecule/basesystem/tasks/templates/agent_assetgen.j2
@@ -10,4 +10,5 @@ spec:
     description: Generate asset file
     parameters:
       assettypes: ['ca', 'orderer', 'peer']
+      channelName: 'mychannel'
       includewallets: {{ includewallets|default('no') }}
