--- a/roles/agent/ops/assetgen/templates/orderer.j2
+++ b/roles/agent/ops/assetgen/templates/orderer.j2
@@ -5,7 +5,7 @@
   "operations_url": "{{ anode.status.operations }}",
   "type": "fabric-orderer",
   "msp_id": "{{ orgid }}",
-  "system_channel_id": "",
+  "system_channel_id": "{{ channelName }}",
   "cluster_id": "{{ anode.metadata.namespace }}",
   "cluster_name": "{{ anode.metadata.namespace }}",
   "name": "{{ anode.metadata.name }}.{{ anode.spec.organization }}",
