--- a/molecule/basesystem/tasks/templates/agent_assetgen_todelete.j2
+++ b/molecule/basesystem/tasks/templates/agent_assetgen_todelete.j2
@@ -1,14 +1,15 @@
 apiVersion: operator.fabric.hyperledger.org/v1alpha1
 kind: Agent
 metadata:
-  name: agent-sample
+  name: orderorgagent
+  namespace: org1space
 spec:
-  organization: example.com
-  cleanup: true
+  organization: ordererorg.com
+  cleanup: false
   actions:
   - name: assetgen
     description: Generate asset file
     parameters:
       assettypes: ['ca', 'orderer', 'peer']
       channelName: 'systemchannel'
-      includewallets: yes
+      includewallets: 'no'
