fixed a wrong mspid when create assets
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/roles/agent/ops/assetgen/templates/peer.j2
+++ b/roles/agent/ops/assetgen/templates/peer.j2
@@ -4,7 +4,7 @@
   "api_url": "{{ anode.status.endpoint }}",
   "operations_url": "{{ anode.status.operations }}",
   "type": "fabric-peer",
-  "msp_id": "{{ assetname }}",
+  "msp_id": "{{ orgid }}",
   "system_channel_id": "{{ channelName }}",
   "cluster_id": "{{ anode.metadata.namespace }}",
   "cluster_name": "{{ anode.metadata.namespace }}",
