Console uses hard coded consortium name
we will have to use that to make console actually work

Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/roles/agent/ops/legacychannelcreate/templates/configtx.j2
+++ b/roles/agent/ops/legacychannelcreate/templates/configtx.j2
@@ -89,7 +89,7 @@ Channel: &ChannelDefaults
 
 Profiles:
   ApplicationGenesis:
-    Consortium: FabricConsortium
+    Consortium: SampleConsortium
     <<: *ChannelDefaults
     Application:
       <<: *ApplicationDefaults
