--- a/roles/agent/ops/assetgen/templates/orderer.j2
+++ b/roles/agent/ops/assetgen/templates/orderer.j2
@@ -5,6 +5,7 @@
   "operations_url": "{{ anode.status.operations }}",
   "type": "fabric-orderer",
   "msp_id": "{{ orgid }}",
+  "version": "2.0",
   "system_channel_id": "{{ channelName }}",
   "cluster_id": "{{ anode.metadata.namespace }}",
   "cluster_name": "{{ anode.metadata.namespace }}",
